--- a/charts/opentelemetry-demo/values.yaml
+++ b/charts/opentelemetry-demo/values.yaml
@@ -27,7 +27,7 @@ observability:
 default:
   # list of environment variables applied to all components
   env:
-    - name: OTEL_SERVICE_NAME
+    - name: OTEL_SERVICE_NAME_KIALI_COMPATIBLE
       valueFrom:
         fieldRef:
           apiVersion: v1
@@ -48,7 +48,7 @@ default:
           apiVersion: v1
           fieldPath: metadata.name
     - name: OTEL_RESOURCE_ATTRIBUTES
-      value: service.name=$(OTEL_SERVICE_NAME),k8s.namespace.name=$(OTEL_K8S_NAMESPACE),k8s.node.name=$(OTEL_K8S_NODE_NAME),k8s.pod.name=$(OTEL_K8S_POD_NAME)
+      value: service.name=$(OTEL_SERVICE_NAME_KIALI_COMPATIBLE).$(OTEL_K8S_NAMESPACE),k8s.namespace.name=$(OTEL_K8S_NAMESPACE),k8s.node.name=$(OTEL_K8S_NODE_NAME),k8s.pod.name=$(OTEL_K8S_POD_NAME)
   # Allows overriding and additions to .Values.default.env
   envOverrides: []
   #  - name: OTEL_K8S_NODE_NAME
